<resources>
    <string name="app_name">Calculator</string>
    <string name="other_app_name">Real Calculator</string>
    <string name="ImageBrowseActivity">ImageBrowseActivity</string>
    <string name="VideoPlayerActivity">VideoPlayerActivity</string>
    <string name="FilesActivity">FilesActivity</string>
    <string name="NewNoteActivity">NewNoteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="percent_button">%</string>
    <string name="all_clear_button">AC</string>
    <string name="erase_button">CE</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="divide_button">÷</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="times_button">x</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="minus_button">-</string>
    <string name="zero_button">0</string>
    <string name="decimal_button">.</string>
    <string name="equal_button">=</string>
    <string name="plus_button">+</string>
    <string name="ERROR">error</string>
    <string name="PowTen">E</string>
    <string name="EnterPass">Enter Password</string>
    <string name="Confirm">Confirm Password</string>
    <string name="OK">OK</string>
    <string name="warning">Warning: Your files will be encrypted with your password. You can still change your password later.</string>
    <string name="message">Enter the password then HOLD the % button to access hidden files.</string>
    <string name="title_activity_navigation">SneakyCal</string>
    <string name="action_delete">Delete</string>
    <string name="Access_Granted">Access Granted</string>
    <string name="Gallery">Gallery</string>
    <string name="Notes">Notes</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="edit_album">Edit Album</string>
    <string name="undo">undo</string>
    <string name="album_name">Album Name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="move">Move</string>
    <string name="export">Export</string>
    <string name="notes">Notes</string>
    <string name="files">Files</string>
    <string name="no_folders">No Folders</string>
    <string name="no_albums">No Albums</string>
    <string name="add_new_folder">Add New Folder</string>
    <string name="add_new_album">Add New Album</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_files">No Files</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="edit_file">Edit File</string>
    <string name="update">Update</string>
    <string name="real_calculator">Real Calculator</string>
    <string name="definitely_a_calculator">definitely a calculator</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_notes_here">Type notes here…</string>
    <string name="no_notes">No Notes</string>
    <string name="about">About</string>
    <string name="verification_spinner">Verification Spinner</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="github_link">https://github.com/limmil/real_calculator</string>
    <string name="learn_more_on">Learn more on</string>
    <string name="created_by_limmil">Created by limmil</string>
    <string name="reset">Reset</string>
    <string name="all">all</string>
    <string name="weak">weak</string>
    <string name="good">good</string>
    <string name="strong">strong</string>
    <string name="password_hash_strength">Password Hash Strength</string>
    <string name="setup_msg">HOLD the % button to get started.</string>
    <string name="cancel">Cancel</string>

</resources>
