<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.limmil.real_calculator.ui.notes.NotesFragment"
        android:label="@string/Notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.limmil.real_calculator.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_files"
        android:name="com.limmil.real_calculator.ui.files.FoldersFragment"
        android:label="@string/files"
        tools:layout="@layout/fragment_folders" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.limmil.real_calculator.ui.setting.SettingFragment"
        android:label="Setting"
        tools:layout="@layout/fragment_setting" />

</navigation>