<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialogs"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/warning"
            android:id="@+id/textView"
            android:textColor="#000"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/password_strength"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/setpass"
            android:maxLength="200"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/EnterPass"/>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirm"
            android:maxLength="200"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:imeOptions="actionDone"
            android:hint="@string/Confirm"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000"
                    android:text="@string/password_hash_strength"/>

                <ImageView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_baseline_help"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-10dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radioGroup">

                    <RadioButton
                        android:id="@+id/weak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weak"/>
                    <RadioButton
                        android:id="@+id/good"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good"/>
                    <RadioButton
                        android:id="@+id/strong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strong"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:id="@+id/okButton"
            android:layout_gravity="center"/>


    </LinearLayout>
</ScrollView>