<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.notes.NewNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40sp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingBottom="10sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true" >

            <ImageView
                android:id="@+id/notesBack"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginStart="6sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="12sp"
                android:contentDescription="@string/Notes"
                android:src="@drawable/ic_baseline_arrow_back"
                app:tint="@color/almostWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/notesSave"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_marginEnd="12sp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/Notes"
                android:padding="4sp"
                android:src="@drawable/ic_baseline_done"
                app:tint="@color/almostWhite"
                app:layout_constraintBottom_toBottomOf="@id/notesBack"
                app:layout_constraintTop_toTopOf="@id/notesBack"
                app:layout_constraintEnd_toEndOf="parent" />
            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginStart="12sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="12sp"
                android:background="@null"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@id/notesBack" />
            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle" />
            <EditText
                android:id="@+id/inputNotes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="12sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="12sp"
                android:layout_marginBottom="15sp"
                android:background="@null"
                android:hint="@string/type_notes_here"
                android:importantForAutofill="no"
                android:gravity="top"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="150sp"
                android:textColor="@color/almostWhite"
                android:textColorHint="@color/grey"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>